se hacen modificaciones en html de arte y ensayos en el resto del proyecto

--- a/Arte.html
+++ b/Arte.html
@@ -53,17 +53,18 @@
     <div class="contenedor-principal">
         <main>
             <section  class="noticias">
-                <h1>5 ARTISTAS HIPERREALISTAS Que Te Dejarán Impactado.</h1>
+                <h1>5 ARTISTAS HIPERREALISTAS QUE TE DEJARAN IMPACTADO.</h1>
                 <p class="subtitulo">¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los 
-                    poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?<p>
+                    poros de la piel!<br> ¿No has pensado eso al ver algunos dibujos hiperrealistas?<p>
                 <article class="noticia-arte">
                     <div class="imagen">
-                        <img src="img/imagen-arte-1.jpg"alt="hiperrealismo" width="600PX" height="">
+                        <img src="img/imagen-arte-1.jpg"alt="hiperrealismo" width="800PX" height="400">
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Dirk Dzimirsky</strong></div>
                         <div class="pie-de-foto1">“He escogido dibujar en vez de pintar ya que me permite crear capas sobre capas<br> 
-                            de líneas y puntos que reaccionan unos con otros para crear una textura vibrante"
+                             de líneas y puntos que reaccionan unos con otros para crear una textura vibrante"
                         </div>
                     </div>
+                    <ul>
                       <p>
                         <strong> Dzimirsky, el hiperrealismo que sobrecoge.</strong><br> 
                         He pasado horas y horas viendo sus dibujos, sus videos y pensando en cómo con un lápiz alguien podía dibujar
@@ -76,13 +77,15 @@
                         En 2005 decidió dedicarse profesionalmente al dibujo y la ilustración.<br> 
                         Tiene una técnica impresionante y muy personal en la que destacan sus fondos difuminados y centra
                         el foco de atención en narices, ojos y bocas.<br>
-                    </p>
+                      </p>
+                    </ul>
                     <h3 class="titulo-temas">Más Hiperrealismo</h3>
                     <div class="temas-relacionados">
-                        <div class="tema1">
-                            <h5>LEONARDO DAVINCI <span>DIC 12</span></h5>
+                      <div class="tema1">
+                            <h5>LEONARDO DAVINCI<span>DIC 12</span></h5>
                             <a href="#">da vinci nunca pinto su fresco mas buscado la batalla de anghiari 542079</a>
-                    <div class="tema2">
+                      </div>
+                      <div class="tema2">
                             <h5>JOE BIDEN<span>DIC 12</span></h5>
                             <a href="#">Expondran los cuadros del hijo del presidente electo de EE.UU</a>
                         </div>
@@ -90,16 +93,15 @@
                             <h5>ARTE <span>DIC 14</span></h5>
                             <a href="#">Artistas populares participan en Expoartesanias 2020</a>
                         </div>
-                    </div>
-                    <div class="img segunda" >
-                        <img src="img/imagen-arte-2.jpg" alt="hiperrealismo" width="400px" height=""><br>
-                        <img src="img/imagen-arte-3.jpg" alt="hiperrealismo" width="400px" height=""><br>
+                    
+                      <div class="img segunda" >
+                        <img src="img/imagen-arte-3.jpg" alt="hiperrealismo" width="800px" height="500"><br>
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Emanuele Dascanio</strong></div>
                         <div class="pie-de-foto1">hace unos retratos inspiradores y de gran belleza,<br> nota mucho en él 
                             el peso de la tradición pictórica italiana.
                         </div>
                         
-                    </div>
+                      </div>
                     <p>
                         <strong> Dascanio, la belleza de los hiperrealistas italianos</strong><br>
                         ¿Qué te ha parecido el video?, ¿Es increíble verdad? <strong> Emanuele Dascanio </strong> 
@@ -114,7 +116,7 @@
                         el lápiz mediante finas líneas aplicadas por capas que van oscureciendo las zonas en sombra
                     </p>
                     <div class="img cuarta" >
-                        <img src="img/imagen-arte-4.jpg" alt="hiperrealismo" width="" height=""><br>
+                        <img src="img/imagen-arte-4.jpg" alt="hiperrealismo" width="800" height=""><br>
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Paul Cadden</strong></div>
                         <div class="pie-de-foto1">dibujos que parecen fotografías.</div>
                     </div>
@@ -133,7 +135,7 @@
                         Si tuviera que describirlo diría que es el<strong> “periodista” entre los artistas hiperrealistas.</strong>
                     </p>
                      <div class="img quinta" >
-                        <img src="img/imagen-arte-5.jpg" alt="hiperrealismo" width="" height=""><br>
+                        <img src="img/imagen-arte-5.jpg" alt="hiperrealismo" width="800" height="500"><br>
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Diego Facio</strong></div>
                         <div class="pie-de-foto1">Diego Facio, cuyo nombre artístico es Digo Koi 
                             y su fascinación por las miradas hiperrealistas.
@@ -151,7 +153,7 @@
                         del hiperrealismo</strong> y se convirtió en una de las referencias entre los artistas hiperrealistas.<br>
                     </p>
                         <div class="img sexta" >
-                        <img src="img/imagen-arte-6.jpg" alt="hiperrealismo" width="" height=""><br>
+                        <img src="img/imagen-arte-6.jpg" alt="hiperrealismo" width="700" height="500"><br>
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Kelvin Okafor</strong></div>
                         <div class="pie-de-foto1">Esculpiendo el papel Y por último pero no menos importante 
                             te dejo con Kelvin Okaford.
