--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -89,7 +89,7 @@
 
                         “El 5G es como un tubo en donde se hace la transferencia de datos e información. Cada generación hace que ese tubo sea más grande, pero en comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande”, señala Ricardo Anaya, product manager de Qualcomm para América Latina.
 
-                        Esto puede permitirle al país soñar con un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes, entre otros.
+                        Esto puede permitirle al país soñar con un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes, entre otros.z
                     </p>
                     <p>Por eso, el despliegue de planes piloto representa la primera parte del camino para que esta tecnología sea una realidad en un futuro en el territorio colombiano. <strong> El Ministerio de las TIC aseguró que los permisos otorgados van hasta junio del próximo año.</strong><br>
 
