--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
             <section class="hijo2">
                 <article>
                     <h2 class="titulo-noticia">Dirk Dzimirsky, el hiperrealismo que sobrecoge.</h2>
-                    <img src="img/arte.jpg" width="300px" alt="Arte">
-                    <h5>20 octubre, 2020 por Juan</h5>
-                    <p>¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?
+                    <img src="img/imagen-arte-1.jpg" width="450px" alt="Arte">
+                        <p>¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?
                         Te voy a enseñar aquí a los 5 mejores artistas hiperrealistas del momento, con una selección de sus mejores dibujos y videos donde los vamos a ver en plena acción.
-                         Como dirían en un concierto… ¡Con todos ustedes: Dzimirsky, Dascanio, Cadden, Facio y Okafor! ¡Que comience el espectáculo y prepara tus ojos para ver algo asombroso!
+                        Como dirían en un concierto… ¡Con todos ustedes: Dzimirsky, Dascanio, Cadden, Facio y Okafor! ¡Que comience el espectáculo y prepara tus ojos para ver algo asombroso!
                     </p><br>
                     <a href="Arte.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
