se hacen modificaciones en html en deportes y en sociedad el proyecto

--- a/index.html
+++ b/index.html
@@ -57,20 +57,21 @@
         <main class="hijo">
             <section class="hijo2">
                 <article>
-                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
-                        ea iste beatae totam nulla aperiam distinctio molestias!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
-                        quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
+                    <h2 class="titulo-noticia">¡Los mejores! El 11 ideal histórico de France Football.</h2>
+                    <img src="img/deportes.jpg" width="550x" alt="">
+                    <p>La revista France Football dio a conocer el mejor 11 inicial de la historia del fútbol. A través de una votación de la que participaron 140 periodistas, el prestigioso medio deportivo formó un equipo con lo mejores de la historia en cada posición. Con el esquema 3-4-3, la revista creó el equipo ideal de todos los tiempos, con dos jugadores que siguen actualmente en actividad.
                     </p><br>
                     <a href="Deportes.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
                 <article>
-                    <h2 class="titulo-noticia">¡Los mejores! El 11 ideal histórico de France Football.</h2>
-                    <img src="/img/deportes.jpg" width="550px" alt="">
-                    <p>La revista France Football dio a conocer el mejor 11 inicial de la historia del fútbol. A través de una votación de la que participaron 140 periodistas, el prestigioso medio deportivo formó un equipo con lo mejores de la historia en cada posición. Con el esquema 3-4-3, la revista creó el equipo ideal de todos los tiempos, con dos jugadores que siguen actualmente en actividad.
+                    <h2 class="titulo-noticia">Eclipse en LATAM</h2>
+                    <img src="img/anteojo.jpg" width="550px" alt="">
+                    <p>Eclipse en LATAM
+                        ¿Que es? Cuando, como y quienes pudieron observarlo.
+                        Te lo contamos:
+                        Por segundo año, Sudamérica tuvo el privilegio de poder observar este fenómeno astronómico que no volverá a ocurrir en la región hasta el 2048.
                     </p><br>
                     <a href="Sociedad.html" target="_blanck"  class="boton" ><button">Ver más</button></a>
                 </article>
