--- a/Deportes.html
+++ b/Deportes.html
@@ -197,10 +197,13 @@
             </li>
         </ul>
     </div>
+    <div class="btn-inicio">
+        <a href="#inicio"><img src="img/logo.png" alt="btn-inicio" width="120px"></a>
+    </div>
     <!-- ---------------Footer----------- -->
     <footer class="contenedor-footer">
         <div class="logo">
-            <img src="/img/logo.png" alt="Diario Digita 360°">
+            <a href="#inicio"><img src="img/logo.png" alt="Diario Digita 360°"></a>
         </div>
         <div class="contactos">
             <h3>Contáctos</h3>
@@ -216,6 +219,6 @@
             <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
         </div>
-    </footer>
+</footer>
 </body>
 </html>
