--- a/index.html
+++ b/index.html
@@ -57,28 +57,27 @@
         <main class="hijo">
             <section class="hijo2">
                 <article>
-                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
-                        ea iste beatae totam nulla aperiam distinctio molestias!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
-                        quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
+                    <h2 class="titulo-noticia"> Eclipse en LATAM:<br> Cuando, como y quienes pudieron observarlo.</h2>
+                    <img src="img/Eclipse-01.png" width="500px" alt="Sociedad">
+                    <p>Este lunes, poco después del mediodía, ocurrió un evento astronómico espectacular: un eclipse solar total que se dio en una franja de 90 kilómetros de ancho, que cruzó de oeste a este la Patagonia chilena y argentina. En el resto del territorio de esos países pudo verse de forma parcial, al igual que en Uruguay, Paraguay, Bolivia, Brasil, Perú y Ecuador.<br>
+                    <strong>Por segundo año, Sudamérica tuvo el privilegio de poder observar este fenómeno astronómico que no volverá a ocurrir en la región hasta el 2048.</strong>
                     </p><br>
-                    <a href="Deportes.html" target="_blanck"  class="boton"><button">Ver más</button></a>
+                    <a href="Sociedad.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
                 <article>
                     <h2 class="titulo-noticia">¡Los mejores! El 11 ideal histórico de France Football.</h2>
-                    <img src="/img/deportes.jpg" width="550px" alt="">
+                    <img src="img/deportes.jpg" width="500px" alt="">
                     <p>La revista France Football dio a conocer el mejor 11 inicial de la historia del fútbol. A través de una votación de la que participaron 140 periodistas, el prestigioso medio deportivo formó un equipo con lo mejores de la historia en cada posición. Con el esquema 3-4-3, la revista creó el equipo ideal de todos los tiempos, con dos jugadores que siguen actualmente en actividad.
                     </p><br>
-                    <a href="Sociedad.html" target="_blanck"  class="boton" ><button">Ver más</button></a>
+                    <a href="Deportes.html" target="_blanck"  class="boton" ><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
                 <article>
                     <h2 class="titulo-noticia">Dirk Dzimirsky, el hiperrealismo que sobrecoge.</h2>
-                    <img src="img/imagen-arte-1.jpg" width="450px" alt="Arte">
+                    <img src="img/imagen-arte-1.jpg" width="500px" alt="Arte">
                         <p>¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?
                         Te voy a enseñar aquí a los 5 mejores artistas hiperrealistas del momento, con una selección de sus mejores dibujos y videos donde los vamos a ver en plena acción.
                         Como dirían en un concierto… ¡Con todos ustedes: Dzimirsky, Dascanio, Cadden, Facio y Okafor! ¡Que comience el espectáculo y prepara tus ojos para ver algo asombroso!
@@ -89,7 +88,7 @@
             <section class="hijo2">
                 <article>
                     <h2 class="titulo-noticia">Aspectos a tener en cuenta para las actividades recreativas</h2>
-                    <img src="img/recreacion1.jpg" width="475px" alt="">
+                    <img src="img/recreacion1.jpg" width="500px" alt="">
                     <p>Con una actualidad tan desbordante en muchos aspectos de la vida, es muy normal el sentirnos estresados y superados
                         por determinadas situaciones, muchas veces el estrés que nos genera la vida laboral, el presente sin precedentes ocasionado
                         por la pandemia mundial y los malestares de nuestra vida diaria, pueden ser perjudiciales para nuestra salud física y, sobre todo,
