--- a/Arte.html
+++ b/Arte.html
@@ -33,9 +33,9 @@
                 </li>
                   <li> <a href="Deportes.html">Deportes </a> </li> 
                   <li> <a href="Sociedad.html">Sociedad </a> </li> 
-                  <li> <a href="Arte.html">Arte </a> </li> 
+                  <li> <a href="Arte.html"><span>Arte</span></a> </li> 
                   <li> <a href="Recreacion.html">Recreacion </a> </li> 
-                  <li> <a href="Tecnologia.html"><span>Tecnologia</span></a></li>
+                  <li> <a href="Tecnologia.html">Tecnologia</a></li>
               </ul>
         </div>
       </nav>
