se corrigen videos en html arte

--- a/Arte.html
+++ b/Arte.html
@@ -191,8 +191,8 @@
               </div>
                 <h3>Te puede Interesar</h3>
                   <div class="video-aside">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/cKeJNQACXbg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4yvZWD6Vby0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="500" height="300" src="https://www.youtube.com/embed/K4fHVm4ZKkY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   <iframe width="500" height="300" src="https://www.youtube.com/embed/tJX2qvOcQrA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>  
                     <div class="opinion">
                       <p>¿Qué te pareció el artículo?</p>
@@ -205,10 +205,10 @@
                           <input class="boton-enviar" type="submit" value="Enviar">
                     </form>
                       <div class="publicidad-horizontal">
-                        <img src="img/publicidad-horizontal2.jpg" alt="Summer-publicidad">
+                        <img src="img/publicidad-horizontal2.jpg" width="50px" height="100" alt="Summer-publicidad">
                       </div>
                         <div class="publicidad-horizontal">
-                          <img src="img/publicidad-horizontal.jpg" alt="Summer-publicidad">
+                          <img src="img/publicidad-horizontal.jpg" width="50px" height="100" alt="Summer-publicidad">
                         </div>
                   </div>  
             </div>
